@@ -1,3 +1,8 @@
+2019-04-13  Larus  <larus@Jim-Macbook-Air>
+
+	* Documentation/H_P_AppendixA/HP_AppA.html [https://sourceforge.net/p/spimsimulator/bugs/88:
+	Formatting problems in typos in mflo, mfhi.
+
 2018-11-23  Larus  <larus@Jim-Macbook-Air>
 
 	* README (https):
